<resources>
    <string name="app_name">Message Me</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="signUpButtonText">Sign Up</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="cancelOnClick">cancelOnClick</string>
    <string name="signUpOnClick">signUpOnClick</string>
    <string name="title_activity_sign_up">Message Me (SignUp)</string>
    <string name="loginOnClick">loginOnClick</string>
    <string name="createAccount">Create New Account</string>
    <string name="createAccountOnClick">createAccountOnClick</string>
    <string name="loginText">Login</string>
    <string name="userNameSignUp">User First Last Name</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="title_activity_compose_message">Compose Message</string>
    <string name="messageTitle">Message:</string>
    <string name="sendButtonText">Send</string>
    <string name="sendMessageOnClick">sendMessageOnClick</string>
    <string name="refresh">Refresh</string>
    <string name="compose">Compose</string>
    <string name="logout">Logout</string>
    <string name="firstNameText">First Name</string>
    <string name="lastNameText">Last Name</string>
    <string name="messageBody">Gloriatur temporibus id vis, accumsan tacimates ex nam.</string>
    <string name="dateText">MM/DD/YYYY HH:MM</string>
    <string name="title_activity_message">MessageMe</string>
</resources>
